--- a/index.html
+++ b/index.html
@@ -1,10 +1,168 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Студія</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header section -->
+    <header class="header">
+      <a class="logo" href="#WebStudio">WebStudio</a>
+      <nav class="nav-header">
+        <ul class="header-list">
+          <li>
+            <a class="header-link" href="">Студия</a>
+          </li>
+          <li>
+            <a class="header-link" href="">Портфолио</a>
+          </li>
+          <li>
+            <a class="header-link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="phone" href="tel:++380961111111">+38 096 111 11 11</a>
+    </header>
+    <!-- Main section -->
+    <main class="main">
+      <!-- Hero section -->
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
+      </section>
+      <!-- Advantage section -->
+      <section>
+        <h2 hidden>Наши преимущества</h2>
+        <ul class="adv-list">
+          <li class="adv-item">
+            Внимание к деталям
+            <p class="adv-desc">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции
+            </p>
+          </li>
+          <li class="adv-item">
+            Пунктуальность
+            <p class="adv-desc">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li class="adv-item">
+            Планирование
+            <p class="adv-desc">
+              Равным образом консультация с широким активом в значитель.ной
+              степени обуславливает.
+            </p>
+          </li>
+          <li class="adv-item">
+            СовременЗначимость этих проблем настолько очевидна, что реализация
+            плановых заданий.ные технологии
+            <p class="adv-desc"></p>
+          </li>
+        </ul>
+      </section>
+      <!-- Service section -->
+      <section>
+        <h2 class="serv-title">Чем мы занимаемся</h2>
+        <ul class="serv-list">
+          <li class="serv-item">
+            <img
+              class="serv-img"
+              src="./images/service/img-1.jpg"
+              alt="Разработка сайта"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="serv-item">
+            <img
+              class="serv-img"
+              src="./images/service/img-2.jpg"
+              alt="Разработка мобильного приложения"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="serv-item">
+            <img
+              class="serv-img"
+              src="./images/service/img-3.jpg"
+              alt="Разработка дизайна"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- Team section -->
+      <h2 class="team-title">Наша команда</h2>
+      <ul class="team-list">
+        <li class="team-item">
+          <img
+            class="team-img"
+            src="./images/team/img1-ihor-demіanenko.jpg"
+            alt="Игорь Демьяненко"
+            width="270"
+            height="260"
+          />
+          <a class="team-link" href="">Игорь Демьяненко</a>
+          <p class="team-desc" lang="en">Product Designer</p>
+        </li>
+        <li class="team-item">
+          <img
+            class="team-img"
+            src="./images/team/img2-olga-repina.jpg"
+            alt="Ольга Репина"
+            width="270"
+            height="260"
+          />
+          <a class="team-link" href="">Ольга Репина</a>
+          <p class="team-desc" lang="en">Frontend Developer</p>
+        </li>
+        <li class="team-item">
+          <img
+            class="team-img"
+            src="./images/team/img3-nilkolai-tarasov.jpg"
+            alt="Николай Тарасов"
+            width="270"
+            height="260"
+          />
+          <a class="team-link" href="">Николай Тарасов</a>
+          <p class="team-desc" lang="en">Marketing</p>
+        </li>
+        <li class="team-item">
+          <img
+            class="team-img"
+            src="./images/team/img4-mikhail-ermakov.jpg"
+            alt="Михаил Ермаков"
+            width="270"
+            height="260"
+          />
+          <a class="team-link" href="">Михаил Ермаков</a>
+          <p class="team-desc" lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </main>
+    <!-- Footer section -->
+    <footer class="footer">
+      <a class="logo" id="WebStudio" href="">WebStudio</a>
+      <address class="footer-address">
+        <ul class="footer-list">
+          <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="footer-item">
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li class="footer-item">
+            <a class="phone" href="tel:++380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
