--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
           </li>
         </ul>
       </nav>
-      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="phone" href="tel:++380961111111">+38 096 111 11 11</a>
+      <ul class="header-contact-list">
+        <li class="hedear-contact-item">
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="hedear-contact-item">
+          <a class="phone" href="tel:++380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <!-- Main section -->
     <main class="main">
