--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
           <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
           <li class="footer-item">
             <a class="mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
+              >info@devstudio.com</a
+            >
           </li>
           <li class="footer-item">
             <a class="phone" href="tel:++380961111111">+38 096 111 11 11</a>
