виправлення помилок після перевірки ментором

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Header section -->
     <header class="header">
-      <a class="logo" href="#WebStudio">WebStudio</a>
+      <a class="logo" href="#index.html">WebStudio</a>
       <nav class="nav-header">
         <ul class="header-list">
           <li>
@@ -35,7 +35,7 @@
       </ul>
     </header>
     <!-- Main section -->
-    <main class="main">
+    <main>
       <!-- Hero section -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -44,38 +44,40 @@
       <!-- Advantage section -->
       <section>
         <h2 hidden>Наши преимущества</h2>
-        <ul class="adv-list">
-          <li class="adv-item">
-            Внимание к деталям
-            <p class="adv-desc">
+        <ul class="advantage-list">
+          <li class="advantage-item">
+            <h3 class="advantage-title">Внимание к деталям</h3>
+            <p class="advantage-desc">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции
             </p>
           </li>
-          <li class="adv-item">
-            Пунктуальность
-            <p class="adv-desc">
+          <li class="advantage-item">
+            <h3 class="advantage-title">Пунктуальность</h3>
+            <p class="advantage-desc">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="adv-item">
-            Планирование
-            <p class="adv-desc">
+          <li class="advantage-item">
+            <h3 class="advantage-title">Планирование</h3>
+            <p class="advantage-desc">
               Равным образом консультация с широким активом в значитель.ной
               степени обуславливает.
             </p>
           </li>
-          <li class="adv-item">
-            СовременЗначимость этих проблем настолько очевидна, что реализация
-            плановых заданий.ные технологии
-            <p class="adv-desc"></p>
+          <li class="advantage-item">
+            <h3 class="advantage-title">Современные технологии</h3>
+            <p class="advantage-desc">
+              СовременЗначимость этих проблем настолько очевидна, что реализация
+              плановых заданий.ные технологии
+            </p>
           </li>
         </ul>
       </section>
       <!-- Service section -->
       <section>
-        <h2 class="serv-title">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="serv-list">
           <li class="serv-item">
             <img
@@ -107,7 +109,7 @@
         </ul>
       </section>
       <!-- Team section -->
-      <h2 class="team-title">Наша команда</h2>
+      <h2 class="section-title">Наша команда</h2>
       <ul class="team-list">
         <li class="team-item">
           <img
@@ -117,8 +119,8 @@
             width="270"
             height="260"
           />
-          <a class="team-link" href="">Игорь Демьяненко</a>
-          <p class="team-desc" lang="en">Product Designer</p>
+          <h3 class="team-person">Игорь Демьяненко</h3>
+          <p class="team-position" lang="en">Product Designer</p>
         </li>
         <li class="team-item">
           <img
@@ -128,8 +130,8 @@
             width="270"
             height="260"
           />
-          <a class="team-link" href="">Ольга Репина</a>
-          <p class="team-desc" lang="en">Frontend Developer</p>
+          <h3 class="team-person">Ольга Репина</h3>
+          <p class="team-position" lang="en">Frontend Developer</p>
         </li>
         <li class="team-item">
           <img
@@ -139,8 +141,8 @@
             width="270"
             height="260"
           />
-          <a class="team-link" href="">Николай Тарасов</a>
-          <p class="team-desc" lang="en">Marketing</p>
+          <h3 class="team-person">Николай Тарасов</h3>
+          <p class="team-position" lang="en">Marketing</p>
         </li>
         <li class="team-item">
           <img
@@ -150,17 +152,24 @@
             width="270"
             height="260"
           />
-          <a class="team-link" href="">Михаил Ермаков</a>
-          <p class="team-desc" lang="en">UI Designer</p>
+          <h3 class="team-person">Михаил Ермаков</h3>
+          <p class="team-position" lang="en">UI Designer</p>
         </li>
       </ul>
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo" id="WebStudio" href="">WebStudio</a>
+      <a class="logo" id="index.html" href="">WebStudio</a>
       <address class="footer-address">
         <ul class="footer-list">
-          <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="footer-item">
+            <a
+              href="https://goo.gl/maps/yXEjWvyn9w8dMvCx5"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
           <li class="footer-item">
             <a class="mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
